# django-pg-copy

./: .gitignore  README.md  pyproject.toml  setup.py
pg_copy/: apps.py  settings.py
pg_copy/management/commands/: pg_backup.py  pg_restore.py
pg_utils/: apps.py  settings.py
pg_utils/management/commands/: pg_backup.py  pg_restore.py
