[build-system]
requires = ["setuptools>=67", "setuptools_scm>=7", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "_version.py"

[tool.ruff]
lint.extend-select = ["I"]

[tool.ruff.format]
preview = true

[project]
name = "django-pg-copy"
authors = [
    {name = "Tim Allen", email = "tallen@wharton.upenn.edu"},
]
description = "Django management command to backup and restore PostgreSQL databases using the DATABASES settings."
readme = "README.md"
requires-python = ">=3.7"
keywords = ["postgres", "postgresql", "backup", "restore", "database"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Framework :: Django",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = ["Django", "django-click"]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "ipython",
  "ruff",
  "pytest-coverage",
]

[project.urls]
"Homepage" = "https://github.com/FlipperPA/django-pg-copy"
"Repository" = "https://github.com/FlipperPA/django-pg-copy"
"Documentation" = "https://github.com/FlipperPA/django-pg-copy"
